workspace = { members = ["browser_mechanics_core", "net/wasabi"] }

[package]
name = "browser_mechanics"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "browser_mechanics"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
browser_mechanics_core = { path = "./browser_mechanics_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
